fix correct zIndex with clippath

--- a/src/components/GameBoard/UsedBoards/style.module.scss
+++ b/src/components/GameBoard/UsedBoards/style.module.scss
@@ -1,7 +1,6 @@
 @import "~styles/shared";
 
 .IslandArea {
-  
   &__boardArea {
     grid-column: 2;
     grid-row: 1;
@@ -13,6 +12,25 @@
     position: absolute;
     transition: all 800ms ease;
     transform-origin: top left;
+    clip-path: path(
+      "M 20.50,223.00 
+       C 20.50,223.00 71.00,114.50 71.00,114.50 
+       71.00,114.50 97.00,71.50 97.00,71.50 
+       97.00,71.50 143.50,40.00 143.50,40.00 
+       143.50,40.00 219.99,31.18 219.99,31.18 
+       219.99,31.18 258.00,55.00 258.00,55.00 
+       258.00,55.00 377.00,16.00 377.00,16.00 
+       377.00,16.00 486.50,37.23 486.50,38.00 
+       486.50,38.31 464.92,83.83 464.92,83.83 
+       464.92,83.83 424.50,117.00 424.50,117.00 
+       424.50,117.00 399.50,227.00 399.50,227.00 
+       399.50,227.00 329.50,307.00 329.50,307.00 
+       329.50,307.00 281.00,314.00 281.00,314.00 
+       281.00,314.00 255.50,290.50 255.50,290.50 
+       255.50,290.50 123.50,329.00 123.50,329.00 
+       123.50,329.00 16.50,306.00 16.50,306.00 
+       16.50,306.00 20.50,223.00 20.50,223.00 Z"
+    );
   }
   &__marker {
     background-image: radial-gradient(rgb(0, 128, 0), rgba(0, 0, 0, 0) 70%);
@@ -21,7 +39,7 @@
     height: 110px;
     margin-top: -50px;
     position: absolute;
-    display:none;
+    display: none;
   }
   &__image {
     //max-height: 100%;
@@ -37,6 +55,7 @@
     font-size: 30px;
     line-height: 1;
     opacity: 0.5;
+    z-index: 1;
   }
   &__onBoardButton:active {
     opacity: 1;
